[Xtend][Hover] Look for sourceElement first before delegate to JDT